# productiondeck

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  StreamDeck_Mini_Protocol_Analysis.md  StreamDeck_Protocol_Reference.md  StreamDeck_USB_Implementation.md  build-devices.sh  build.rs  build.sh  memory.x  memory.x.disabled
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: build.yml
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  development_environment.md  project_overview.md  suggested_commands.md  task_completion_workflow.md  tech_stack.md
include/: opendeck.h  opendeck_config.h  productiondeck.h  productiondeck_config.h  tusb_config.h  usb_descriptors.h
src/: buttons.rs  channels.rs  config.rs  display.rs  hardware.cpp  hardware.rs  lib.rs  main.cpp  main.rs  opendeck.cpp  productiondeck.cpp  supervisor.rs  types.rs  usb.rs  usb_descriptors.cpp
src/device/: mini.rs  mod.rs  module6.rs  original.rs  original_v2.rs  plus.rs  xl.rs
src/protocol/: mod.rs  module.rs  module_15_32.rs  module_6.rs  v1.rs  v2.rs
